Fix overflowing sections and tweak layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -57,15 +57,19 @@ html {
 }
 
 .block-section {
-    height: 100%;
-    padding-top: 150px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-left: 30px;
+    padding-right: 30px;
     text-align: center;
     background: #fff;
 }
 
 .block-section-alt {
-    height: 100%;
-    padding-top: 150px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-left: 30px;
+    padding-right: 30px;
     text-align: center;
     background: #eee;
 }
